--- a/isof/M27_camping/app/src/main/AndroidManifest.xml
+++ b/isof/M27_camping/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.ParcelaEdit"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
         <activity
             android:name=".ui.ParcelasListar"
             android:exported="true">
