--- a/isof/M27_camping/app/src/main/AndroidManifest.xml
+++ b/isof/M27_camping/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
 
         <activity
-            android:name=".ui.ParcelasListar"
+            android:name=".ui.ParcelaReservadaListar"
             android:exported="false"
             android:windowSoftInputMode="adjustResize">
         </activity>
