--- a/isof/M27_camping/app/src/main/AndroidManifest.xml
+++ b/isof/M27_camping/app/src/main/AndroidManifest.xml
@@ -34,6 +34,13 @@
             android:exported="false"
             android:windowSoftInputMode="adjustResize">
         </activity>
+
+        <activity
+            android:name=".ui.Pruebas"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
+
         <activity
             android:name=".ui.Inicio"
             android:exported="true">
@@ -43,6 +50,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
